<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@drawable/backgr" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/best_support"
        android:textColor="@color/white"
        android:textSize="@dimen/MediumFont" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="@dimen/champion_width"
        android:layout_height="@dimen/champion_height"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="121dp"
        android:background="@drawable/alistar" />

    <TextView
        android:id="@+id/result1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:text="Alistar"
        android:textColor="@color/white"
        android:textSize="@dimen/MediumFont" />

    <TextView
        android:id="@+id/also_consider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result1"
        android:layout_centerHorizontal="true"
        android:text="@string/also_consider"
        android:textColor="@color/gray"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/also_consider"
        android:layout_centerHorizontal="true"
        android:gravity="center" >

        <RelativeLayout
            android:id="@+id/bottom_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@dimen/champion_width"
                android:layout_height="@dimen/champion_height"
                android:background="@drawable/janna" />

            <TextView
                android:id="@+id/result2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView2"
                android:layout_centerHorizontal="true"
                android:text="Sona"
                android:textColor="@color/white"
                android:textSize="@dimen/MediumFont" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bottom_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/bottom_left" >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="@dimen/champion_width"
                android:layout_height="@dimen/champion_height"
                android:background="@drawable/sona" />

            <TextView
                android:id="@+id/result3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView3"
                android:layout_centerHorizontal="true"
                android:text="Janna"
                android:textColor="@color/white"
                android:textSize="@dimen/MediumFont" />
        </RelativeLayout>
    </RelativeLayout>

    <org.ninjalamp.lolsupport.widgets.LolsupportButton
        android:id="@+id/back_button"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_released"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="16sp" >
    </org.ninjalamp.lolsupport.widgets.LolsupportButton>

    <com.google.ads.AdView
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        ads:adSize="BANNER"
        ads:adUnitId="a150b88a97dc0e9"
        ads:loadAdOnCreate="true"
        ads:testDevices="TEST_EMULATOR, TEST_DEVICE_ID" />

</RelativeLayout>